--- a/Workaholic.CategoryService.Api/Workaholic.CategoryService.Api.csproj
+++ b/Workaholic.CategoryService.Api/Workaholic.CategoryService.Api.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,6 +19,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Workaholic.CategoryService.Repository\Workaholic.CategoryService.Repository.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
